# embed-framework

./: CMakeLists.txt  README.md
source/: embedded.js  index.html  jsFunk.js  main.cpp  style.css  user.cpp
